fix(Layout): Horizontal scroll in animations fixed

--- a/src/app/modules/layout/layout.component.css
+++ b/src/app/modules/layout/layout.component.css
@@ -22,6 +22,7 @@ body {
 #content-wrapper {
     border: 1px solid transparent;
     background-color: #EAEAEA;
+    overflow: hidden;
 }
 
 #content {
